--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,12 @@
 <mat-toolbar color="primary">
   <button mat-icon-button class="icon" aria-label="icon-button with menu icon">
-    <mat-icon>menu</mat-icon>
+    <mat-icon>supervised_user_circle</mat-icon>
   </button>
   <span>My App</span>
   <span class="spacer"></span>
-  <button
-    mat-icon-button
-    class="icon favorite-icon"
-    aria-label="icon-button with heart icon"
-  >
-    <mat-icon>favorite</mat-icon>
-  </button>
-  <button mat-icon-button class="icon" aria-label="icon-button with share icon">
-    <mat-icon>share</mat-icon>
+
+  <button mat-raised-button color="warn" (click)="openDialog()">
+    Add product
   </button>
 </mat-toolbar>
 <router-outlet></router-outlet>
