--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,4 +9,7 @@
     Add product
   </button>
 </mat-toolbar>
-<router-outlet></router-outlet>
+<div class="container">
+  <app-product></app-product>
+</div>
+<!-- <router-outlet></router-outlet> -->
