--- a/src/app/components/dialog/dialog.component.html
+++ b/src/app/components/dialog/dialog.component.html
@@ -1,3 +1,4 @@
+<mat-progress-bar *ngIf="isLoading" mode="indeterminate"></mat-progress-bar>
 <div mat-dialog-title class="dialog-header">
   <h1>Add Product</h1>
   <button mat-icon-button mat-dialog-close class="close-button">
